--- a/Sorting Algorith Visualizer/index.html
+++ b/Sorting Algorith Visualizer/index.html
@@ -11,7 +11,7 @@
     <nav class="nav_bar">
       
         <ul class="nav_bar__items">
-            <li class="item nav_item__array_generete">Generate new array</li>
+            <button class="item nav_item__array_generete">Generate new array</button>
             <li class="item nav_item__change_array_size">Change the array size</li>
             <li class="item nav_item__range"><input id="range_input" type="range" min="4" max="35" step="1"></li>
         </ul>
@@ -20,14 +20,14 @@
                 <li class="item nav_item_quick_sort">Quick Sort</li>
                 <li class="item nav_item_heap_sort">Heap Sort</li>
                 <li class="item nav_item_bubble_sort">Bubble Sort</li>
-                <li class="item nav_item_sort">Sort</li>
+                <button class="item nav_item_sort">Sort</button>
         </ul>
     </nav>
     <main>
         <div class="container">
             <ul class="array_cells__items"></ul>
         </div>
-        <p class="range_text">2</p>
+        <p class="range_text"></p>
     </main>
     
 </body>
