added oppenet eaten

--- a/backgammon/index.html
+++ b/backgammon/index.html
@@ -24,6 +24,7 @@
                     <ul draggable="false" class="col" id="8"></ul>
                     <ul draggable="false" class="col" id="7"></ul>
                 </div>
+                <div class="eaten-container"></div>
                 <div class="cols_right__container" draggable="false">
                     <ul draggable="false" class="col" id="19"></ul>
                     <ul draggable="false" class="col" id="20"></ul>
