--- a/backgammon/index.html
+++ b/backgammon/index.html
@@ -47,8 +47,8 @@
           <img style="visibility: hidden;"><img style="visibility: hidden;">
         </div>
         <div class="out-tools-container">
-            <div class="out-tools"></div>
-            <div class="out-tools"></div>
+            <div class="out-black-tools"></div>
+            <div class="out-white-tools"><p class="drop-title"></p></div>
         </div>
    
     </div>
