--- a/backgammon/index.html
+++ b/backgammon/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="dice-container">
-        <button class="dice-btn">Role dice</button>
+        <button class="dice-btn">גלגל קוביות</button>
         <div class="dice">
           <img style="visibility: hidden;"><img style="visibility: hidden;">
         </div>
