--- a/backgammon/index.html
+++ b/backgammon/index.html
@@ -8,6 +8,34 @@
     <title>Backgammon</title>
 </head>
 <body>
+    <div class="start-new-game">
+        <p class="win"></p>
+        <button class="start-new-btn">התחל משחק חדש</button>
+    </div>
+
+    <div class="instructions">
+        <h1>:כללי המשחק</h1>
+        <ul>
+            <p>.1</p>
+            <li>מטרת המשחק היא להביא את כל הכלים הירוקים אל הרביע הימני התחתון של הלוח</li>
+            <p>.2</p>
+            <li>לשחקן מותר לזוז רק נגד כיוון השעון ורק על פי המספר הקוביות שגלגל</li>
+            <p>.3</p>
+            <li>אם מספר שני הקוביות זהה השחקן יוכל לזוז ארבע פעמים כמספר הקוביות לדוגמא: 2 2 = 2 + 2 + 2 + 2</li>
+            <p>.4</p>
+            <li>לשחקן מותר לאכול כלי של יריבו רק במקרה שבעמודת הכלי של היריב  קיים כלי אחד בלבד</li>
+            <p>.5</p>
+            <li>היריב יכול לאכול כלים של השחקן ובמקרה שנאכל כלי הוא יועבר למרכז הלוח עד אשר הכלי יצא</li>
+            <p>.6</p>
+            <li>כלי של שחקן יכול לצאת ממרכז הלוח אם מספר הקוביות מצביע על עמודה ריקה ברביע הימני העליון של הלוח  (ימני תחתון במקרה של היריב) או בעלת שחקן יריב אחד או בעלת שחקנים של אותה קבוצה</li>
+            <p>.7</p>
+            <li>רק כאשר כל השחקנים נמצאים בעמודה הימנית התחתונה השחקן יוכל להתחיל להוציאם אל המגש שמימין</li>
+            <p>.8</p>
+            <li>המצנח הוא הראשון שהצליח להוציא את כל השחקנים אל מחוץ ללוח</li>
+        </ul>
+        <button class="start-play">התחל במשחק</button>
+    </div>
+
     <div class="board" draggable="false">
         <div class="container" draggable="false">
                 <div class="cols_left__container" draggable="false">
