--- a/Sorting Algorith Visualizer/index.html
+++ b/Sorting Algorith Visualizer/index.html
@@ -16,10 +16,10 @@
             <li class="item nav_item__range"><input id="range_input" type="range" min="4" max="35" step="1"></li>
         </ul>
         <ul class="nav_sotring__items">
-                <li class="item nav_item_merge_sort">Merge Sort</li>
-                <li class="item nav_item_quick_sort">Quick Sort</li>
-                <li class="item nav_item_heap_sort">Heap Sort</li>
-                <li class="item nav_item_bubble_sort">Bubble Sort</li>
+                <li class="item"><button class="item_sort__btn nav_item_merge_sort">Merge Sort</button></li>
+                <li class="item"><button class="item_sort__btn nav_item_quick_sort">Quick Sort</button></li>
+                <li class="item"><button class="item_sort__btn nav_item_heap_sort">Heap Sort</button></li>
+                <li class="item"><button class="item_sort__btn nav_item_bubble_sort">Bubble Sort</button></li>
                 <button class="item nav_item_sort">Sort</button>
         </ul>
     </nav>
